--- a/aws-cognito/package.json
+++ b/aws-cognito/package.json
@@ -19,8 +19,10 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.15.1",
     "@aws-sdk/client-s3": "^3.884.0",
     "@types/uuid": "^10.0.0",
+    "aws-amplify": "^6.15.6",
     "uuid": "^13.0.0"
   }
 }
