--- a/aws-cognito/package.json
+++ b/aws-cognito/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@aws-amplify/auth": "^6.15.1",
+    "@aws-sdk/client-cognito-identity": "^3.894.0",
     "@aws-sdk/client-s3": "^3.884.0",
+    "@aws-sdk/credential-providers": "^3.894.0",
     "@types/uuid": "^10.0.0",
     "aws-amplify": "^6.15.6",
     "uuid": "^13.0.0"
