--- a/aws-cognito/package.json
+++ b/aws-cognito/package.json
@@ -25,6 +25,7 @@
     "@aws-sdk/credential-providers": "^3.894.0",
     "@types/uuid": "^10.0.0",
     "aws-amplify": "^6.15.6",
+    "aws-xray-sdk-core": "^3.10.3",
     "uuid": "^13.0.0"
   }
 }
